# NIDS_with_Reinforcement_Learning

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_format.py
server/: Dockerfile  __init__.py  app.py  nids_environment.py  requirements.txt
